--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
 
 <div class="wp-block-column is-layout-flow wp-container-core-column-is-layout-4 wp-block-column-is-layout-flow" style="padding-top:var(--wp--preset--spacing--30);padding-right:0px;padding-left:0px;flex-basis:40%">
-<p class="has-contrast-color has-text-color has-link-color has-archivo-narrow-font-family wp-elements-c411ad0ca9e4ee96d2631cd3175ad6d4" style="margin-right:0px;margin-left:-30px;font-size:clamp(26.465px, 1.654rem + ((1vw - 3.2px) * 1.931), 45px);font-style:normal;font-weight:400;letter-spacing:2px;line-height:1.2;text-transform:uppercase">Rótulos e Etiquetas</p>
+<p class="has-contrast-color has-text-color has-link-color has-archivo-narrow-font-family wp-elements-c411ad0ca9e4ee96d2631cd3175ad6d4" style="margin-right:0px;margin-left:-30px;font-size:clamp(26.465px, 1.654rem + ((1vw - 3.2px) * 1.931), 45px);font-style:normal;font-weight:400;letter-spacing:2px;line-height:1.2;text-transform:uppercase">Rótulos e Etiquetas TTTT</p>
 
 
 
