Atualizar Site VC

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 <style type="text/css">*[id^='readlink'] {
  font-weight: normal;
  color: #000000;
- background: ;
+ background: tra;
  padding: 0px;
  border-bottom: 0px solid #000000;
  -webkit-box-shadow: none !important;
